--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
+  "scripts": {
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
+  },
   "dependencies": {
     "@langchain/community": "^0.3.33",
     "@langchain/core": "^0.3.42",
     "@langchain/google-genai": "^0.1.10",
     "@langchain/google-vertexai": "^0.2.0",
     "@langchain/langgraph": "^0.2.51",
-    "@langchain/openai": "^0.4.4"
+    "@langchain/openai": "^0.4.4",
+    "drizzle-kit": "^0.30.5"
   }
 }
