--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "^1.2.4",
+    "@types/react": "^19.0.10"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -14,12 +15,15 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@elysiajs/html": "^1.2.0",
+    "@elysiajs/static": "^1.2.0",
     "@langchain/community": "^0.3.33",
     "@langchain/core": "^0.3.42",
     "@langchain/google-genai": "^0.1.10",
     "@langchain/google-vertexai": "^0.2.0",
     "@langchain/langgraph": "^0.2.51",
     "@langchain/openai": "^0.4.4",
-    "drizzle-kit": "^0.30.5"
+    "drizzle-kit": "^0.30.5",
+    "elysia": "^1.2.25"
   }
 }
