--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "dev": "bun --watch index.ts"
   },
   "dependencies": {
     "@elysiajs/html": "^1.2.0",
@@ -24,6 +25,7 @@
     "@langchain/langgraph": "^0.2.51",
     "@langchain/openai": "^0.4.4",
     "drizzle-kit": "^0.30.5",
+    "drizzle-orm": "^0.40.1",
     "elysia": "^1.2.25"
   }
 }
